--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 $('#get-data').on('click', function(){
     let name = $(this).text();
-    const url = `http://get-all-calls.herokuapp.com/get-all-calls`
+    const url = `https://get-all-calls.herokuapp.com/get-all-calls`
 
     $("#table:not(:first-child)").html(`<div class="lds-ring"><div></div><div></div><div></div><div></div></div>`)
     
