--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ let count2 = (arr, stat) =>{
     let d1 = $("#date-input-from").val()
     let d2 = $("#date-input-to").val()
 
-  $('#loadload').html(`<div class="lds-ring"><div></div><div></div><div></div><div></div></div>`
+  $('#loadload').html(`<div class="lds-ring"><div></div><div></div><div></div><div></div></div>`)
    
    
     let msFrom = d1.toString();
